{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 191,
  "lineage": "92e78b6b-571f-34ef-e732-e3613ac808ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009c50b4b021bfa3b",
            "arn": "arn:aws:ec2:eu-central-1:982534385511:elastic-ip/eipalloc-009c50b4b021bfa3b",
            "domain": "vpc",
            "id": "eipalloc-009c50b4b021bfa3b",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-178-151-54.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.178.151.54",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:internet-gateway/igw-08c0ad974d302ee68",
            "id": "igw-08c0ad974d302ee68",
            "owner_id": "982534385511",
            "region": "eu-central-1",
            "tags": {
              "Name": "korona-eg-ecs-ec2-igw",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-igw",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:loadbalancer/app/korona-eg-ecs-ec2-alb/d24b8ce4bdc97c28",
            "arn_suffix": "app/korona-eg-ecs-ec2-alb/d24b8ce4bdc97c28",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "korona-eg-ecs-ec2-alb-156210042.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:loadbalancer/app/korona-eg-ecs-ec2-alb/d24b8ce4bdc97c28",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "korona-eg-ecs-ec2-alb",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-09924f1f226384ab3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0063cdf2d8884f181"
              },
              {
                "subnet_id": "subnet-08d187e877012d638"
              }
            ],
            "subnets": [
              "subnet-0063cdf2d8884f181",
              "subnet-08d187e877012d638"
            ],
            "tags": {
              "Name": "korona-eg-ecs-ec2-alb",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-alb",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "vpc_id": "vpc-0735e702163a87c3f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:loadbalancer/app/korona-eg-ecs-ec2-alb/d24b8ce4bdc97c28"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:listener/app/korona-eg-ecs-ec2-alb/d24b8ce4bdc97c28/c01e564024b33a00",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:targetgroup/korona-eg-ecs-ec2-tg/26cef95d8145d67e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:listener/app/korona-eg-ecs-ec2-alb/d24b8ce4bdc97c28/c01e564024b33a00",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:loadbalancer/app/korona-eg-ecs-ec2-alb/d24b8ce4bdc97c28",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:listener/app/korona-eg-ecs-ec2-alb/d24b8ce4bdc97c28/c01e564024b33a00"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:targetgroup/korona-eg-ecs-ec2-tg/26cef95d8145d67e",
            "arn_suffix": "targetgroup/korona-eg-ecs-ec2-tg/26cef95d8145d67e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:targetgroup/korona-eg-ecs-ec2-tg/26cef95d8145d67e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "korona-eg-ecs-ec2-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "korona-eg-ecs-ec2-tg",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-tg",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:982534385511:targetgroup/korona-eg-ecs-ec2-tg/26cef95d8145d67e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009c50b4b021bfa3b",
            "association_id": "eipassoc-0a080c86606158e88",
            "connectivity_type": "public",
            "id": "nat-0b58b0b1e22725d5c",
            "network_interface_id": "eni-076b2c8851e53548f",
            "private_ip": "10.60.0.214",
            "public_ip": "63.178.151.54",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d187e877012d638",
            "tags": {
              "Name": "korona-eg-ecs-ec2-nat",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-nat",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-073ca0c80ef4b339b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b58b0b1e22725d5c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-073ca0c80ef4b339b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-073ca0c80ef4b339b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c0ad974d302ee68",
            "id": "r-rtb-0fd141e521a38ba6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0fd141e521a38ba6e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0fd141e521a38ba6e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:route-table/rtb-073ca0c80ef4b339b",
            "id": "rtb-073ca0c80ef4b339b",
            "owner_id": "982534385511",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "korona-eg-ecs-ec2-rt-private",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-rt-private",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "rtb-073ca0c80ef4b339b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:route-table/rtb-0fd141e521a38ba6e",
            "id": "rtb-0fd141e521a38ba6e",
            "owner_id": "982534385511",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "korona-eg-ecs-ec2-rt-public",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-rt-public",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "rtb-0fd141e521a38ba6e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e91303eb19def282",
            "region": "eu-central-1",
            "route_table_id": "rtb-073ca0c80ef4b339b",
            "subnet_id": "subnet-019732759c3db9661"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e357222a2736b3a9",
            "region": "eu-central-1",
            "route_table_id": "rtb-073ca0c80ef4b339b",
            "subnet_id": "subnet-029e2b871f00f0c31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07303e832276b9987",
            "region": "eu-central-1",
            "route_table_id": "rtb-0fd141e521a38ba6e",
            "subnet_id": "subnet-08d187e877012d638"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f004f2c21e744301",
            "region": "eu-central-1",
            "route_table_id": "rtb-0fd141e521a38ba6e",
            "subnet_id": "subnet-0063cdf2d8884f181"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:security-group/sg-09924f1f226384ab3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09924f1f226384ab3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "korona-eg-ecs-ec2-alb-sg",
            "name_prefix": "",
            "owner_id": "982534385511",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "korona-eg-ecs-ec2-alb-sg",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-alb-sg",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "sg-09924f1f226384ab3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:security-group/sg-0443546d700152638",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0443546d700152638",
            "ingress": [],
            "name": "korona-eg-ecs-ec2-ecs-instances-sg",
            "name_prefix": "",
            "owner_id": "982534385511",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "korona-eg-ecs-ec2-ecs-instances-sg",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-ecs-instances-sg",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "sg-0443546d700152638",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:security-group/sg-0c5df6c873a0c0de1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5df6c873a0c0de1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09924f1f226384ab3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "korona-eg-ecs-ec2-tasks-sg",
            "name_prefix": "",
            "owner_id": "982534385511",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "korona-eg-ecs-ec2-tasks-sg",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-tasks-sg",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "sg-0c5df6c873a0c0de1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:subnet/subnet-019732759c3db9661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.60.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019732759c3db9661",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534385511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "korona-eg-ecs-ec2-private-eu-central-1a",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-private-eu-central-1a",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "subnet-019732759c3db9661",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:subnet/subnet-029e2b871f00f0c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.60.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029e2b871f00f0c31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534385511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "korona-eg-ecs-ec2-private-eu-central-1b",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-private-eu-central-1b",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "subnet-029e2b871f00f0c31",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:subnet/subnet-08d187e877012d638",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.60.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d187e877012d638",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982534385511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "korona-eg-ecs-ec2-public-eu-central-1a",
              "kubernetes.io/role/elb": "1",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-public-eu-central-1a",
              "kubernetes.io/role/elb": "1",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "subnet-08d187e877012d638",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:subnet/subnet-0063cdf2d8884f181",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.60.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0063cdf2d8884f181",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982534385511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "korona-eg-ecs-ec2-public-eu-central-1b",
              "kubernetes.io/role/elb": "1",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-public-eu-central-1b",
              "kubernetes.io/role/elb": "1",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "vpc_id": "vpc-0735e702163a87c3f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "982534385511",
            "id": "subnet-0063cdf2d8884f181",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:982534385511:vpc/vpc-0735e702163a87c3f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.0.0/16",
            "default_network_acl_id": "acl-07854d105b4c2f348",
            "default_route_table_id": "rtb-0aa4eb27bf32a70a7",
            "default_security_group_id": "sg-0460b68eda9375362",
            "dhcp_options_id": "dopt-06aa9ff3523316b9d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0735e702163a87c3f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa4eb27bf32a70a7",
            "owner_id": "982534385511",
            "region": "eu-central-1",
            "tags": {
              "Name": "korona-eg-ecs-ec2-vpc",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            },
            "tags_all": {
              "Name": "korona-eg-ecs-ec2-vpc",
              "owner": "devops-lab-witalij-ec2-ecs",
              "project": "korona-eg-ecs-ec2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}